--- a/VolvoCaminhoes.Web/VolvoCaminhoes.Web.csproj
+++ b/VolvoCaminhoes.Web/VolvoCaminhoes.Web.csproj
@@ -6,6 +6,14 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VolvoCaminhoes.Repository\VolvoCaminhoes.Repository.csproj" />
   </ItemGroup>
 
 </Project>
