Construção do Manager e atualização de Testes

--- a/VolvoCaminhoes.Domain/VolvoCaminhoes.Domain.csproj
+++ b/VolvoCaminhoes.Domain/VolvoCaminhoes.Domain.csproj
@@ -8,4 +8,19 @@
     <Folder Include="Entities\Map\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources\Mensagens.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Mensagens.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Mensagens.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Mensagens.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
