--- a/VolvoCaminhoes.Tests/VolvoCaminhoes.Tests.csproj
+++ b/VolvoCaminhoes.Tests/VolvoCaminhoes.Tests.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Moq.AutoMock" Version="3.0.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
@@ -34,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\VolvoCaminhoes.Manager\VolvoCaminhoes.Manager.csproj" />
     <ProjectReference Include="..\VolvoCaminhoes.Repository\VolvoCaminhoes.Repository.csproj" />
   </ItemGroup>
 
